--- a/css/stylez.css
+++ b/css/stylez.css
@@ -20,11 +20,60 @@ h1 {
 }
 
 .calculator {
-  border: 2px solid black;
+  padding: 40px;
+  background-color: white;
 }
+
+#moredogform {
+  display:none;
+}
+
+button:active {
+  background-color: pink;
+}
+
+
+.btn-group {
+  margin-bottom: 10px;
+}
+
+.dogNumPicker {
+  height: 40px;
+}
+
+.pickerlabel {
+  text-align: center;
+}
+
+.dogNumPicker input {
+  font-size: 2em;
+  margin-left: 5px;
+  text-align: center;
+  width: 55%;
+  height: 55px;
+  vertical-align: middle;
+}
+
+.dogNumPicker button {
+  border: 0px solid white;
+  padding: none;
+  margin: none;
+
+  font-size: 1.5em;
+  width: 10%;
+  margin: 0px 5%;
+  line-height: 1.5em;
+  background-color: pink;
+}
+
+.dogNumPicker button:active {
+  background-color: green;
+}
+
 
 html, body {
 font-family: 'Raleway', sans-serif;
+background-color: black;
 }
 
 #submit {
@@ -37,6 +86,7 @@ border: 2px solid black;
 }
 
 #result {
+  background-color: white;
   margin-top: 30px;
   height: 500px;
   border: 1px solid black;
@@ -53,9 +103,10 @@ border: 2px solid black;
 }
 
 .scoreline {
-  padding: 3px;
+  padding: 3px 12px;
   margin-bottom: 3px;
   background-color: red;
+  font-size: 1.2em;
 }
 
 .positive {
@@ -70,6 +121,10 @@ border: 2px solid black;
   margin-left: 25%;
   width: 50%;
   border-top: 1px solid black;
+}
+
+.subtotal {
+
 }
 
 #result ul {
