finished beta version

--- a/css/stylez.css
+++ b/css/stylez.css
@@ -55,6 +55,10 @@ label {
   font-size: 1.3em;
 }
 
+label.btn {
+  font-size: 1.3em;
+}
+
 .dogNumPicker input {
   font-size: 2em;
   text-align: center;
@@ -86,6 +90,8 @@ label {
   transition: all 0.3s;
 }
 
+
+
 button:hover {
   top: 2px;
   box-shadow: 0 2px #A2DED0;
@@ -105,7 +111,9 @@ button:active {
   margin-right: 20%;
 }
 
-
+.form-inline {
+  margin-bottom: 10px;
+}
 
 
 html, body {
@@ -205,6 +213,12 @@ html, body {
   background-color: #87D37C;
 }
 
+.caveat {
+  background-color: #F22613;
+  text-align: center;
+  font-size: 1.3em;
+}
+
 .negative {
   background-color: #F22613;
 }
@@ -246,14 +260,37 @@ html, body {
 
 }
 
+#creativeBonus {
+  font-size: 1.3em;
+  font-weight: bold;
+  color: black;
+}
+
+
 
 /* Extra small devices (phones, less than 768px) */
+@media(max-width: 767px){
+  label {
+    text-align: center;
+  }
+
+  label.btn {
+    font-size: 1em;
+  }
+  #submit {
+    font-size: 1.5em;
+    margin-bottom: 20px;
+  }
+}
+
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
 .beta {
   display: inline;
   }
+
+
 }
 
 /* Medium devices (desktops, 992px and up) */
